--- a/css_demo.html
+++ b/css_demo.html
@@ -395,17 +395,20 @@ a:hover {
 		Esta página usa DIV para estructuras las secciones. Haz clic para ver la página sin estilo ni CSS vinculada:<br><a href="#" onclick="noStyles();return false">No Stylesheet</a>.
 	  </p>
    </div>
-    <div id="sidebar">
+   <div id="Información del modificador">
       <h3>Side-Bar</h3>
-	  <p>
-		Ejemplo de demo que lograrás realizar al finalizar el tema.
-	  </p>
+      <p>
+        Mi nombre es Diego García Martín
+	      <a href="https://twitter.com/Maxxid111"> mi cuenta de twitter </a>        
+	      <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgacetinmadrid.com%2F2020%2F05%2F19%2Fmadrid-dispara-hoy-los-casos-detectados-de-covid-19-y-registra-el-doble-de-fallecidos-que-ayer%2F&psig=AOvVaw3AW3xOZ0XDEmaB5gTTpzTc&ust=1591810125529000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiWy_6g9ekCFQAAAAAdAAAAABAE">  Presta atención a esta imagen del virus Co-Vid 19, virus productor de esta pandemia</a>
+    </p>
     </div>
+  
     
     
   
 
-  </div>  
+
   
   
   <div id="bottom">
